--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14
 WORKDIR /opt/app
 ADD . .
-RUN apt install npm
-RUN apt npm run build api
+RUN apt-get install npm
+RUN apt-get npm run build api
 CMD ["node", "./dist/apps/api/main.js"]
