--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:14
 WORKDIR /opt/app
 ADD . .
+RUN apt-get update
+RUN apt-get upgrade
 RUN apt-get install npm
 RUN apt-get npm run build api
 CMD ["node", "./dist/apps/api/main.js"]
