--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -4,5 +4,6 @@ ADD . .
 RUN apt-get update
 RUN apt-get upgrade
 RUN apt-get install nodejs -y
+RUN apt-get install npm -y
 RUN apt-get npm run build api -y
 CMD ["node", "./dist/apps/api/main.js"]
