--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14
 WORKDIR /opt/app
 ADD . .
-RUN apt-get npm i -y
+RUN npm install -y
 RUN apt-get npm run build api -y
 CMD ["node", "./dist/apps/api/main.js"]
